# f1-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: LAST-MEMORY.md
agent/: agent.py  llm.py  prompts.py  retriever.py  router.py  tools.py
api/: main.py  schemas.py
api/routes/: chat.py  health.py  standings.py
db/: schema.sql
docs/: FE-summary.md  FE.md  PHASE_1.md  PHASE_2.md  PHASE_2_DONE.md  PHASE_3.md  PHASE_3_DONE.md  PLAN.md  PREREQUISITES.md  Phase-1-summary.md  Phase-2-summary.md  Phase-3-summary.md  deployment-approaches.md
docs/superpowers/specs/: 2026-04-04-frontend-design.md
explain/: notes.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/__tests__/: MessageBubble.test.tsx  useChat.test.ts  useStandings.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  SourceChip.tsx
frontend/components/layout/: Navbar.tsx  SplitLayout.tsx
frontend/hooks/: useChat.ts  useStandings.ts
frontend/lib/: api.ts  teamColors.ts  types.ts
ingestion/: healthcheck.py  pipeline.py  scheduler.py
ingestion/core/: config.py  logging.py  models.py
ingestion/embedders/: ollama.py
ingestion/extractors/: base.py  jolpica.py  news.py  openf1.py  wikipedia.py
ingestion/loaders/: pgvector.py
ingestion/transformers/: chunker.py
tests/: conftest.py  test_agent.py  test_api.py  test_extractors.py  test_pipeline.py  test_scheduler.py  test_standings.py  test_tools.py
(+6 files in other folders)
