[project]
name = "f1-chatbot"
version = "0.1.0"
description = "F1 AI Chatbot"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "pydantic==2.8.0",
  "pydantic-settings==2.4.0",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "aiohttp==3.10.0",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "wikipedia-api==0.7.1",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.31.0",
  "aiosqlite==0.20.0",
  "pgvector==0.3.2",
  "langchain-text-splitters==0.3.11",
  "apscheduler==3.10.4",
  "tenacity>=9.0.0",
  "structlog==24.4.0",
  "tqdm==4.66.5",
  "xxhash==3.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.0",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "agent", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
